<resources>
    <string name="app_name">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="this_is_settings_menu">Settings menu</string>
    <string name="textField1">textfield 1 input</string>
    <string name="textField2">textfield 2 input</string>
    <string name="text_alignment">Text alignment:</string>
    <string name="text_size">Text size:</string>
    <string name="text_color">Text color:</string>
    <string name="typeface_style">Typeface style:</string>
    <string name="text_input_disabled">Disable textfield 1 editing:</string>
    <string name="yes">yes</string>
    <string name="display_text">display text</string>
    <string name="language">Language:</string>
    <string name="save">Save</string>

    <string-array name="alignment">
        <item>Left</item>
        <item>Center</item>
        <item>Right</item>
    </string-array>

    <string-array name="text_size">
        <item>10sp</item>
        <item>12sp</item>
        <item>14sp</item>
        <item>18sp</item>
        <item>24sp</item>
    </string-array>

    <string-array name="text_color">
        <item>black</item>
        <item>green</item>
        <item>yellow</item>
        <item>red</item>
    </string-array>

    <string-array name="typeface">
        <item>normal</item>
        <item>sans</item>
        <item>serif</item>
        <item>monospace</item>
    </string-array>

    <string-array name="text_language">
        <item>English</item>
        <item>Finnish</item>
        <item>Swedish</item>
    </string-array>
</resources>
